2006-08-02  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_signals_thread) : Add missing return from
	  signals thread.

2006-07-27  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c : Update to latest rev from LSD-Tools, which
	  fixes some bugs found by Coverity.

	* src/common/dsh.c, src/common/privsep.c : Add checks for return
	  codes from pthread_mutex_lock/unlock. (Coverity).

2006-07-26  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.h, src/pdsh/dsh.c : Allow ctrl-Z (SIGTSTP) issued
	  within 1s of ctrl-C to cancel pending threads (those threads which
	  have not yet begun issuing the remote command).

	* doc/pdsh.1.in, doc/pdcp.1.in : Update documentation.

	* : tag pdsh-2.11.

2006-07-18  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak : Add new -s option to sort output. Contributed by 
	  tdussa at users.sourceforge.net.

2006-07-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c : Fix bug where WCOLL hosts were unconditionally
	  added to list of targets. Prior behavior was to have -w override
	  WCOLL. [Reported by Fergal McCarthy].

2006-06-05  Jim Garlick <garlick@llnl.gov>

	* doc/pdsh.1.in : fix a few typos [Chris Pepper]

2006-04-07  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c : Report more specific errors when path to
	pdsh modules is not secure, and include the real path to the
	directory with the permissions problem.

2006-03-22  Mark Grondona <mgrondona@llnl.gov>

	* src/common/split.c : Fix missing headers.

2006-03-22  Jim Garlick <garlick@llnl.gov>

	* src/xcpucmd.c : Use new local exec facility and set args to
	  run /bin/sh -c 'cmd'.
	
2006-03-22  Mark Grondona <mgrondona@llnl.gov>
	* src/common/split.c, src/common/split.h, src/pdsh/opt.c : 
	  Move list_join() from pdsh/opt.c to common/split.c.

	* src/pdsh/rcmd.h, src/pdsh/rcmd.c, src/pdsh/dsh.c, 
	  src/pdsh/opt.c, src/modules/sshcmd.c, src/modules/genders.c :
	  Missing updates from rcmd-rewrite branch. Allow user@